certs/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: training-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    #certmanager.k8s.io/issuer: "letsencrypt-staging"

spec:
  tls:
  - hosts:
    - demo.training.com
    secretName: training-example-tls
  rules:
  - host: demo.training.com
    http:
      paths:
      - path: /
        backend:
          serviceName: k8sdemo-service
          servicePort: 3000
